--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
 
 
 <body>
-    <h1><a href="main.html">Doctor beauty</a></h1>  
+    <h1><a href="index.html">Doctor beauty</a></h1>  
 
     <ol>
         <li><a href="1.html">시술 상담 하기</a></li>
