--- a/1.html
+++ b/1.html
@@ -37,6 +37,6 @@
             <!--End of Tawk.to Script-->
     </p>
 
-    <img src="image1.avif">
+    <img src="consulting.png">
 </body>
 </html>
