--- a/1.html
+++ b/1.html
@@ -2,6 +2,7 @@
 <head>
     <title>Doctor beauty</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -9,7 +10,7 @@
     <h1><a href="index.html">Doctor beauty</a></h1>  
 
     <ol>
-        <li><a href="1.html">시술 상담 하기</a></li>
+        <li><a href="1.html" style="color:blue;text-decoration: underline;">시술 상담 하기</a></li>
         <li><a href="2.html">나의 예약 관리</a></li>
         <li><a href="3.html">나의 변화 과정</a></li>
         <li><a href="4.html">시술 찾기</a></li>
@@ -20,6 +21,7 @@
 
 
     <p style="margin-top:100px;"><strong><u>시술 상담 하기</u></strong></p>
+    <p style="margin-top:100px;"><strong><u>오른쪽 상단의 Icon을 클릭해서 상담을 시작하세요</u></strong></p>
     
     <p style="margin-top:100px;">
         <!--Start of Tawk.to Script-->
