--- a/5.html
+++ b/5.html
@@ -2,18 +2,19 @@
 <head>
     <title>Doctor beauty</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-    <h1><a href="index.html">Doctor beauty</a></h1>  
+    <h1><a href="index..html">Doctor beauty</a></h1>  
 
     <ol>
         <li><a href="1.html">시술 상담 하기</a></li>
         <li><a href="2.html">나의 예약 관리</a></li>
         <li><a href="3.html">나의 변화 과정</a></li>
         <li><a href="4.html">시술 찾기</a></li>
-        <li><a href="5.html">병원 찾기</a></li>
+        <li><a href="5.html" style="color:blue;text-decoration: underline;">병원 찾기</a></li>
         <li><a href="6.html">시술후기 공유</a></li>
     </ol>
 
