--- a/6.html
+++ b/6.html
@@ -2,6 +2,7 @@
 <head>
     <title>Doctor beauty</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -14,7 +15,7 @@
         <li><a href="3.html">나의 변화 과정</a></li>
         <li><a href="4.html">시술 찾기</a></li>
         <li><a href="5.html">병원 찾기</a></li>
-        <li><a href="6.html">시술후기 공유</a></li>
+        <li><a href="6.html" style="color:blue;text-decoration: underline;">시술후기 공유</a></li>
     </ol>
 
 
