--- a/index.html
+++ b/index.html
@@ -2,25 +2,30 @@
 <head>
     <title>Doctor beauty</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
     <h1><a href="index.html">Doctor beauty</a></h1>  
 
-    <ol>
-        <li><a href="1.html">시술 상담 하기</a></li>
-        <li><a href="2.html">나의 예약 관리</a></li>
-        <li><a href="3.html">나의 변화 과정</a></li>
-        <li><a href="4.html">시술 찾기</a></li>
-        <li><a href="5.html">병원 찾기</a></li>
-        <li><a href="6.html">시술후기 공유</a></li>
-    </ol>
+    <div id="grid">
+        <div id="list">
+            <ol>
+                <li><a href="1.html">시술 상담 하기</a></li>
+                <li><a href="2.html">나의 예약 관리</a></li>
+                <li><a href="3.html">나의 변화 과정</a></li>
+                <li><a href="4.html">시술 찾기</a></li>
+                <li><a href="5.html">병원 찾기</a></li>
+                <li><a href="6.html">시술후기 공유</a></li>
+            </ol>
+        </div>  
 
+        <div id="contents">
+            <p style="margin: 0; padding:20px;"><strong><u>main page</u></strong></p>
+            <img src="image1.avif">
+        <div>
+    </div>
 
-    <p style="margin-top:100px;"><strong><u>main page</u></strong></p>
-
-
-    <img src="image1.avif">
 </body>
 </html>
